build: role