@@ -1,9 +1,10 @@
 package com.mealgo.security;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import com.mealgo.entity.User;
@@ -17,17 +18,20 @@ public class CustomUserDetails implements UserDetails {
     private final String name;
     private final String email;
     private final String password;
+    private final String role;
 
     public CustomUserDetails(User user) {
         this.id = user.getId();
         this.name = user.getName();
         this.email = user.getEmail();
         this.password = user.getPassword();
+        this.role = user.getRole();
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(
+                new SimpleGrantedAuthority("ROLE_" + role));
     }
 
     @Override
@@ -39,4 +43,5 @@ public class CustomUserDetails implements UserDetails {
     public String getPassword() {
         return password;
     }
+
 }
